--- a/bank.html
+++ b/bank.html
@@ -3,43 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BankAccount</title>
-    <link rel="icon" href="bank.png" type="icon/type">
+    <title>Document</title>
 </head>
 <body>
-
-    <form action="" id="accountform">
-        <input type="text" id="customername" placeholder="customername">
-        <input type="text" id="balance" placeholder="balance">
-        <button>create new account</button>
-    </form>
-
     <script>
-        function BankAccount(coustomername,balance = 0){
-            this.coustomername = coustomername;
-            this.accountnumber = Date.now();
-            this.balance = balance;
-            this.deposit = function(amount){
+        class bankaccount{
+            constructor(cusname,balance = 0){
+                this.cusname = cusname;
+                this.accountnum = Date.now();
+                this.balance = balance;
+            }
+            deposit(amount){
                 this.balance += amount;
             }
-            this.withdrow = function(amount){
-                this.balance += amount;     
+            withdrow(amount){
+                this.balance -= amount;
             }
         }
-        let Ali = new BankAccount("Ali Chowdhry",5000000);
-        let adeel= new BankAccount("adeel",500000);
-        adeel.deposit(5000);
-        adeel.withdrow(200);
+        let ali = new bankaccount("ali chowdhry",1000);
+        ali.deposit(100);
+        ali.withdrow(200);
 
-        const accountform = document.querySelector("#accountform");
-        const customername= document.querySelector("#customername");
-        const balance= document.querySelector("#balance");
+        class savingaccount extends bankaccount{
+            transactionlimit= 50000;
 
-        accountform.addEventListener('submit',(e)=>{
-            e.preventDefault();
-            console.log(customername.value,balance.value);
-        })
+            constructor(cusname,balance=0){
+                super(cusname,balance)
+            }
+            transactionlimit(amount){
+                console.log("your transaction limit",amount);
+            }
+        }
+
+        let adeel = new savingaccount("adeel chowdhry",10000);
+
+        class businessaccount extends bankaccount{
+            transactionlimit= 50000;
+
+         constructor(cusname,balance=0){
+         super(cusname,balance)
+        }
+         transactionlimit(amount){
+                console.log("your transaction limit",amount);
+          }
+        }
+
+        let ahmed = new businessaccount("ahmed chowdhry",10000);
+        
     </script>
 </body>
 </html>
-
